bootstrap my logos css

--- a/src/styles/layout/modals.css
+++ b/src/styles/layout/modals.css
@@ -1,5 +1,6 @@
 .modal-dialog {
     font-family: 'Poppins', sans-serif;
+    z-index: 1000000;
 }
 .modal-dialog .modal-dialog__title,
 .modal-dialog .modal-dialog__title h2 {
