--- a/src/styles/index.css
+++ b/src/styles/index.css
@@ -1,4 +1,7 @@
 @import url('https://fonts.googleapis.com/css?family=Poppins:300,400');
+@import '~bootstrap/dist/css/bootstrap-reboot.css';
+@import '~bootstrap/dist/css/bootstrap-grid.css';
+@import '~bootstrap/dist/css/bootstrap.css';
 
 @import './layout/index.css';
-
+@import './pages/index.css';
